small edits on the explorer page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -157,5 +159,6 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-family: "Albert Sans", sans-serif;
   }
 }
